Update help content and language flow

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Klassekart Generator",
+  "name": "MittKlassekart - Gratis Klassekartgenerator",
   "short_name": "Klassekart",
   "description": "Organiser klasseromsplassering enkelt med dra og slipp",
   "start_url": "/",
