--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^4.1.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
